--- a/apple-homepage/public/index.html
+++ b/apple-homepage/public/index.html
@@ -4,10 +4,57 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e5843b7c3a.js" crossorigin="anonymous"></script>
   <title>Apple</title>
 </head>
-<body>
-  <h1 class="text-green-500">Test</h1>
+<body class="bg-black">
+  <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3">
+    <div class="container px-4 max-auto flex flex-wrap items-center justify-between">
+      <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
+        <a href="#home" class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white">Home</a>
+        <button class="curser-pointer text-xl leading-none px-3 py-1 border border-solid border-transperent rounded bg-transparent block lg:hidden lg:outline-none focus:outline-none" type="button" onclick="toggleNavbar('navbarcollapse')">
+          <i class="text-white fas fa-bars"></i>
+        </button>
+      </div>
+      <div class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden" id="navbarcollapse">
+        <ul class="flex flex-col lg:flex-row list-none mr-auto">
+          <li class="flex items-center">
+            <a href="#ipad" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-tablet text-lg leading-lg mr-2"></i>iPad</a>
+          </li>
+          <li class="flex items-center">
+            <a href="#macbook" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-laptop text-lg leading-lg mr-2"></i>Macbook</a>
+          </li>
+          <li class="flex items-center">
+            <a href="#team" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-users text-lg leading-lg mr-2"></i>Team</a>
+          </li>
+          <li class="flex items-center">
+            <a href="#contact" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-address-card text-lg leading-lg mr-2"></i>Get in touch</a>
+          </li>
+        </ul>
+        <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+          <li class="flex items-center">
+            <a href="#facebook" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fab fa-facebook mr-2 text-lg leading-lg"></i>
+            <span class="lg:hidden inline-block ml-2"></span>
+          </a>
+          </li>
+          <li class="flex items-center">
+            <a href="#twitter" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fab fa-twitter mr-2 text-lg leading-lg"></i>
+            <span class="lg:hidden inline-block ml-2"></span>
+          </a>
+          </li>
+          <li class="flex items-center">
+            <button class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3" type="button"><i class="fas fa-arrow-circle-down mr-2"></i> Store</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <script>
+    function toggleNavbar(collapseId) {
+      document.getElementById(collapseId).classList.toggle('hidden');
+      document.getElementById(collapseId).classList.toggle('block');
+    }
+  </script>
 </body>
 </html>
