Implemented front page promotional products
Signed-off-by: DeviousLab <deviouslab@gmail.com>

--- a/apple-homepage/public/index.html
+++ b/apple-homepage/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,43 +10,61 @@
   <script src="https://kit.fontawesome.com/e5843b7c3a.js" crossorigin="anonymous"></script>
   <title>Apple</title>
 </head>
+
 <body class="bg-black">
   <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 bg-black">
     <div class="container px-4 max-auto flex flex-wrap items-center justify-between">
       <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
-        <a href="#home" class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white">Home</a>
-        <button class="curser-pointer text-xl leading-none px-3 py-1 border border-solid border-transperent rounded bg-transparent block lg:hidden lg:outline-none focus:outline-none" type="button" onclick="toggleNavbar('navbarcollapse')">
+        <a href="#home"
+          class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white">Home</a>
+        <button
+          class="curser-pointer text-xl leading-none px-3 py-1 border border-solid border-transperent rounded bg-transparent block lg:hidden lg:outline-none focus:outline-none"
+          type="button" onclick="toggleNavbar('navbarcollapse')">
           <i class="text-white fas fa-bars"></i>
         </button>
       </div>
       <div class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden" id="navbarcollapse">
         <ul class="flex flex-col lg:flex-row list-none mr-auto">
           <li class="flex items-center">
-            <a href="#ipad" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-tablet text-lg leading-lg mr-2"></i>iPad</a>
+            <a href="#ipad"
+              class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i
+                class="lg:text-gray-300 text-gray-500 fas fa-tablet text-lg leading-lg mr-2"></i>iPad</a>
           </li>
           <li class="flex items-center">
-            <a href="#macbook" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-laptop text-lg leading-lg mr-2"></i>Macbook</a>
+            <a href="#macbook"
+              class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i
+                class="lg:text-gray-300 text-gray-500 fas fa-laptop text-lg leading-lg mr-2"></i>Macbook</a>
           </li>
           <li class="flex items-center">
-            <a href="#team" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-users text-lg leading-lg mr-2"></i>Team</a>
+            <a href="#team"
+              class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i
+                class="lg:text-gray-300 text-gray-500 fas fa-users text-lg leading-lg mr-2"></i>Team</a>
           </li>
           <li class="flex items-center">
-            <a href="#contact" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fas fa-address-card text-lg leading-lg mr-2"></i>Get in touch</a>
+            <a href="#contact"
+              class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i
+                class="lg:text-gray-300 text-gray-500 fas fa-address-card text-lg leading-lg mr-2"></i>Get in touch</a>
           </li>
         </ul>
         <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
           <li class="flex items-center">
-            <a href="#facebook" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fab fa-facebook mr-2 text-lg leading-lg"></i>
-            <span class="lg:hidden inline-block ml-2"></span>
-          </a>
+            <a href="#facebook"
+              class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i
+                class="lg:text-gray-300 text-gray-500 fab fa-facebook mr-2 text-lg leading-lg"></i>
+              <span class="lg:hidden inline-block ml-2"></span>
+            </a>
           </li>
           <li class="flex items-center">
-            <a href="#twitter" class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i class="lg:text-gray-300 text-gray-500 fab fa-twitter mr-2 text-lg leading-lg"></i>
-            <span class="lg:hidden inline-block ml-2"></span>
-          </a>
+            <a href="#twitter"
+              class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"><i
+                class="lg:text-gray-300 text-gray-500 fab fa-twitter mr-2 text-lg leading-lg"></i>
+              <span class="lg:hidden inline-block ml-2"></span>
+            </a>
           </li>
           <li class="flex items-center">
-            <button class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3" type="button"><i class="fas fa-arrow-circle-down mr-2"></i> Store</button>
+            <button
+              class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
+              type="button"><i class="fas fa-arrow-circle-down mr-2"></i> Store</button>
           </li>
         </ul>
       </div>
@@ -55,7 +74,8 @@
     <div class="relative pt-16 lg:pb-32 flex content-center items-center justify-center min-h-home-lg" id="home">
       <div class="absolute w-full h-full">
         <video autoplay muted class="top-0 bg-center">
-          <source src="https://www.apple.com/105/media/us/macbook-pro-13/2020/f2b14406-42ad-405e-bfa0-71b52a0bfd67/anim/chip/large.mp4">
+          <source
+            src="https://www.apple.com/105/media/us/macbook-pro-13/2020/f2b14406-42ad-405e-bfa0-71b52a0bfd67/anim/chip/large.mp4">
         </video>
       </div>
       <div class="container relative mx-auto hidden md:block ">
@@ -68,6 +88,50 @@
         </div>
       </div>
     </div>
+    <section class="pb-20 mt-40 bg-gray-100" id="ipad" style="height:500px">
+      <div class="container mx-auto px-4">
+        <div class="flex flex-wrap">
+          <div class="w-full lg:pt-12 pt-6 md:w-4/12 px-4 text-center">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+              <div class="px-4 py-5 flex-auto">
+                <div
+                  class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
+                  <i class="fas fa-tablet-alt"></i>
+                </div>
+                <h6 class="text-xl font-semibold">iPad Pro</h6>
+                <p class="mt-2 mb-4 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                  nostrum in nisi cum. Commodi exercitationem, perferendis neque placeat veritatis, dignissimos
+                  repudiandae unde minima esse molestias aspernatur soluta iste reiciendis animi.</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-full md:w-4/12 px-4 text-center">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+              <div class="px-4 py-5 flex-auto">
+                <div
+                  class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-blue-400">
+                  <i class="fas fa-laptop"></i>
+                </div>
+                <h6 class="text-xl font-semibold">Macbook Pro Pro</h6>
+                <p class="mt-2 mb-4 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                  nostrum in nisi cum. Commodi exercitationem, perferendis neque placeat veritatis, dignissimos
+                  repudiandae unde minima esse molestias aspernatur soluta iste reiciendis animi.</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-full lg:pt-12 pt-6 md:w-4/12 px-4 text-center">
+            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
+              <div class="px-4 py-5 flex-auto">
+                <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
+                  <i class="fas fa-mobile-alt"></i>
+                </div>
+                <h6 class="text-xl font-semibold">iPhone</h6>
+                <p class="mt-2 mb-4 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nostrum in nisi cum. Commodi exercitationem, perferendis neque placeat veritatis, dignissimos repudiandae unde minima esse molestias aspernatur soluta iste reiciendis animi.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
   </main>
   <script>
     function toggleNavbar(collapseId) {
@@ -76,4 +140,5 @@
     }
   </script>
 </body>
+
 </html>
