Implemented ipad section
Signed-off-by: DeviousLab <deviouslab@gmail.com>

--- a/apple-homepage/public/index.html
+++ b/apple-homepage/public/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
     </div>
-    <section class="pb-20 mt-40 bg-gray-100" id="ipad" style="height:500px">
+    <section class="pb-20 mt-40 bg-gray-100" id="ipad">
       <div class="container mx-auto px-4">
         <div class="flex flex-wrap">
           <div class="w-full lg:pt-12 pt-6 md:w-4/12 px-4 text-center">
@@ -127,6 +127,31 @@
                 </div>
                 <h6 class="text-xl font-semibold">iPhone</h6>
                 <p class="mt-2 mb-4 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nostrum in nisi cum. Commodi exercitationem, perferendis neque placeat veritatis, dignissimos repudiandae unde minima esse molestias aspernatur soluta iste reiciendis animi.</p>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-wrap items-center mt-32">
+            <div class="w-full md:w-5/12 px-4 mr-auto ml-auto">
+              <div class="text-gray-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shaodw-lg rounded-full bg-gray-200">
+                <i class="fas fa-tablet-alt text-xl"></i>
+              </div>
+              <h3 class="text-3xl mb-2 font-semibold">New iPad Pro</h3>
+              <p class="text-lg font-light leading-relaxed mt-4 text-gray-700">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, ut molestias magnam, distinctio illo corporis sed fugiat qui aliquam maxime perferendis aperiam quaerat incidunt vitae ipsa consectetur dolor tempore?
+              </p>
+              <p class="text-lg font-light leading-relaxed mt-4 text-gray-700">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, ut molestias magnam, distinctio illo corporis sed fugiat qui aliquam maxime perferendis aperiam quaerat incidunt vitae ipsa consectetur dolor tempore?
+              </p>
+            </div>
+            <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+              <div class="relative flex flex-col min-w-0 break-words w-fulll mb-6 shaodw-lg rounded-lg bg-black">
+                <img src="https://www.apple.com/v/ipad-pro/ah/images/shared/ipad_trade_in__ggq1dqvyb56y_large.png" class="w-full align-middle rounded-t-lg" alt="ipad pro">
+                <blockquote class="relative p-8 mb-4 bg-black">
+                  <h4 class="text-lg font-bold text-white">iPad Pro 12.9" and 11"</h4>
+                  <p class="text-md font-light mt-2 text-white">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id voluptate maiores beatae quaerat eaque facere distinctio provident aliquid quasi, omnis sapiente quibusdam aliquam veniam unde odit tempore. Quaerat, iste.
+                  </p>
+                </blockquote>
               </div>
             </div>
           </div>
