Implemented footer section
Signed-off-by: DeviousLab <deviouslab@gmail.com>

--- a/apple-homepage/public/index.html
+++ b/apple-homepage/public/index.html
@@ -122,34 +122,45 @@
           <div class="w-full lg:pt-12 pt-6 md:w-4/12 px-4 text-center">
             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
               <div class="px-4 py-5 flex-auto">
-                <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
+                <div
+                  class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
                   <i class="fas fa-mobile-alt"></i>
                 </div>
                 <h6 class="text-xl font-semibold">iPhone</h6>
-                <p class="mt-2 mb-4 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nostrum in nisi cum. Commodi exercitationem, perferendis neque placeat veritatis, dignissimos repudiandae unde minima esse molestias aspernatur soluta iste reiciendis animi.</p>
+                <p class="mt-2 mb-4 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                  nostrum in nisi cum. Commodi exercitationem, perferendis neque placeat veritatis, dignissimos
+                  repudiandae unde minima esse molestias aspernatur soluta iste reiciendis animi.</p>
               </div>
             </div>
           </div>
           <div class="flex flex-wrap items-center mt-32">
             <div class="w-full md:w-5/12 px-4 mr-auto ml-auto">
-              <div class="text-gray-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shaodw-lg rounded-full bg-gray-200">
+              <div
+                class="text-gray-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shaodw-lg rounded-full bg-gray-200">
                 <i class="fas fa-tablet-alt text-xl"></i>
               </div>
               <h3 class="text-3xl mb-2 font-semibold">New iPad Pro</h3>
               <p class="text-lg font-light leading-relaxed mt-4 text-gray-700">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, ut molestias magnam, distinctio illo corporis sed fugiat qui aliquam maxime perferendis aperiam quaerat incidunt vitae ipsa consectetur dolor tempore?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, ut molestias magnam,
+                distinctio illo corporis sed fugiat qui aliquam maxime perferendis aperiam quaerat incidunt vitae ipsa
+                consectetur dolor tempore?
               </p>
               <p class="text-lg font-light leading-relaxed mt-4 text-gray-700">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, ut molestias magnam, distinctio illo corporis sed fugiat qui aliquam maxime perferendis aperiam quaerat incidunt vitae ipsa consectetur dolor tempore?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum, ut molestias magnam,
+                distinctio illo corporis sed fugiat qui aliquam maxime perferendis aperiam quaerat incidunt vitae ipsa
+                consectetur dolor tempore?
               </p>
             </div>
             <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
               <div class="relative flex flex-col min-w-0 break-words w-fulll mb-6 shaodw-lg rounded-lg bg-black">
-                <img src="https://www.apple.com/v/ipad-pro/ah/images/shared/ipad_trade_in__ggq1dqvyb56y_large.png" class="w-full align-middle rounded-t-lg" alt="ipad pro">
+                <img src="https://www.apple.com/v/ipad-pro/ah/images/shared/ipad_trade_in__ggq1dqvyb56y_large.png"
+                  class="w-full align-middle rounded-t-lg" alt="ipad pro">
                 <blockquote class="relative p-8 mb-4 bg-black">
                   <h4 class="text-lg font-bold text-white">iPad Pro 12.9" and 11"</h4>
                   <p class="text-md font-light mt-2 text-white">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id voluptate maiores beatae quaerat eaque facere distinctio provident aliquid quasi, omnis sapiente quibusdam aliquam veniam unde odit tempore. Quaerat, iste.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id voluptate maiores beatae
+                    quaerat eaque facere distinctio provident aliquid quasi, omnis sapiente quibusdam aliquam veniam
+                    unde odit tempore. Quaerat, iste.
                   </p>
                 </blockquote>
               </div>
@@ -158,6 +169,88 @@
         </div>
     </section>
   </main>
+  <footer class="relative pt-8 pb-6">
+    <div class="bottom-auto top-0 left-0 right-0 w-full absolute overflow-hidden -mt-20" style="height: 80px;">
+      <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+        version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+        <polygon class="text-white fill-current" points="2560 0 2560 100 0 100"></polygon>
+      </svg>
+    </div>
+    <div class="container mx-auto px-4">
+      <div class="flex flex-wrap">
+        <div class="w-full lg:w-6/12 px-4">
+          <h4 class="text-3xl font-semibold">Lets keep In Touch!</h4>
+          <h5 class="text-lg mb-2 text-gray-700">You Can Find Us On These Platforms.</h5>
+          <div class="mt-6">
+            <button
+              class="bg-white text-blue-400 p-3 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none mr-2">
+              <i class="fab fa-twitter"></i>
+            </button>
+            <button
+              class="bg-white text-blue-600 p-3 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none mr-2">
+              <i class="fab fa-facebook"></i>
+            </button>
+            <button
+              class="bg-white text-purple-500 p-3 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none mr-2">
+              <i class="fab fa-instagram"></i>
+            </button>
+            <button
+              class="bg-white text-red-600 p-3 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none mr-2">
+              <i class="fab fa-youtube"></i>
+            </button>
+            <button
+              class="bg-white text-black p-3 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none mr-2">
+              <i class="fab fa-github"></i>
+            </button>
+          </div>
+        </div>
+        <div class="w-full lg:w-6/12 px-4">
+          <div class="flex flex-wrap mb-6">
+            <div class="w-full lg:w-4/12 px-4 ml-auto">
+              <span class="block uppercase text-gray-600 text-sm font-semibold mb-2">Useful Links</span>
+              <ul>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">About Us</a>
+                </li>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Contact Us</a>
+                </li>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Our Products</a>
+                </li>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Our Locations</a>
+                </li>
+              </ul>
+            </div>
+            <div class="w-full lg:w-4/12 px-4 ml-auto">
+              <span class="block uppercase text-gray-600 text-sm font-semibold mb-2">Useful Resources</span>
+              <ul>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Lorem, ipsum.</a>
+                </li>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Lorem</a>
+                </li>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Lorem, ipsum.</a>
+                </li>
+                <li>
+                  <a href="" class="text-gray-700 hover:text-gray-900 font-semibold text-sm pb-2">Lorem</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="my-6 border-gray-400">
+      <div class="flex flex-wrap items-center md:justify-between justify-center">
+        <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+          <div class="text-sm text-gray-600 font-semibold py-1">Copyright 2021 Apple Clone</div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script>
     function toggleNavbar(collapseId) {
       document.getElementById(collapseId).classList.toggle('hidden');
