--- a/apple-homepage/public/index.html
+++ b/apple-homepage/public/index.html
@@ -168,6 +168,36 @@
           </div>
         </div>
     </section>
+    <section class="relative py-20 bg-black" id="macbook">
+      <div class="bottom-auto top-0 left-0 right-0 w-full absolute overflow-hidden -mt-20" style="height: 80px;">
+        <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+          version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+          <polygon class="text-black fill-current" points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+      </div>
+      <div class="container mx-auto px-4 bg-black">
+        <div class="items-center flex flex-wrap">
+          <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+            <img
+              src="https://www.apple.com/v/macbook-pro-13/g/images/overview/magic_keyboard__brx9diaauwaa_large_2x.jpg"
+              class="max-w-full rounded-lg shadow-lg" style="width:400px" alt="">
+          </div>
+          <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+            <div class="md:pr-12">
+              <div
+                class="text-black p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-white">
+                <i class="fas fa-laptop text-xl"></i>
+              </div>
+              <h3 class="text-3xl font-semibold text-white">Macbook Pro 13" and 16"</h3>
+              <p class="mt-4 text-lg leading-relaxed text-gray-300">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Adipisci sint commodi, eaque vel
+                itaque ut! Corporis, rerum quo. Ipsa vero animi aspernatur laborum sunt quas doloremque?
+                Nam fuga harum provident.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="relative py-20 bg-white" id="team">
       <div class="bottom-auto top-0 left-0 right-0 w-full absolute overflow-hidden -mt-20" style="height: 80px;">
         <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
